--- a/style.css
+++ b/style.css
@@ -990,6 +990,12 @@ input::-webkit-input-placeholder {
   color: #F8F8F8;
 }
 
+.cart__content__right {
+  display: flex;
+  flex-direction: column;
+  gap: 57px;
+}
+
 .address__info {
   display: flex;
   flex-direction: column;
@@ -1033,7 +1039,6 @@ input::-webkit-input-placeholder {
 }
 
 .final__score {
-  margin-top: 57px;
   width: 360px;
   height: 214px;
   background: #F5F3F3;
@@ -1329,6 +1334,37 @@ input::-webkit-input-placeholder {
   .pagination {
     margin-top: 40px;
     margin-bottom: 64px;
+  }
+  .cart__content {
+    margin-top: 59px;
+    flex-direction: column;
+    gap: 64px;
+  }
+  .cart__content__left__buttons {
+    margin-top: 62px;
+    gap: 48px;
+    justify-content: center;
+  }
+  .product__add {
+    align-items: center;
+  }
+  .cart__content__right {
+    flex-direction: row;
+    gap: 16px;
+  }
+  .final__score {
+    margin-top: 38px;
+  }
+  .registration__content {
+    padding-top: 64px;
+    gap: 22px;
+  }
+  .loyalty__perks__info {
+    font-size: 16px;
+    line-height: 19px;
+  }
+  .loyalty__perks__info__title {
+    margin-bottom: 32px;
   }
 }
 @media (max-width: 767px) {
